GachaKit // i18n-jp: Optimize the texts for gacha stats.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -10193,7 +10193,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "平均ガチャ回數（限定星５）"
+            "value" : "平均ガチャ回數(限定星5)"
           }
         },
         "ko" : {
@@ -10270,7 +10270,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "平均ガチャ回數（星５）"
+            "value" : "平均ガチャ回數(星5)"
           }
         },
         "ko" : {
@@ -10424,7 +10424,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "積んだ回数（前回の星5から）"
+            "value" : "積んだ回数(前回の星5から)"
           }
         },
         "ko" : {
